[project]
name = "ichipro-Wiki"
version = "0.1.0"
description = "The document of Ichipro project for Hiroshima City University."
authors = [
    { name = "sasakulari", email = "147146974+m-tsuru@users.noreply.github.com" }
]
dependencies = [
    "mkdocs-material>=9.5.27",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
